<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sleep.SleepFormActivity">

    <Button
        android:id="@+id/sleep_form_save"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_form_end"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sleep_form_date"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:drawableStart="@drawable/ic_date"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sleep_form_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/sleep_form_start"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_clock"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/bedtime"
        android:inputType="time"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sleep_form_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_form_date"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/sleep_form_end"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_clock"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/wakingtime"
        android:inputType="time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_form_start"
        android:autofillHints="" />

</android.support.constraint.ConstraintLayout>